Menu improvements - closes on navigation now

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -177,9 +177,9 @@ header.policy-hub, header.policy-hub .navbar .dropdown-content {
                 font-size: 1rem;
             }
         }
-        li:first-child a {
-            line-height: 36px;
-        }
+        // li:first-child a {
+        //     line-height: 36px;
+        // }
         li:hover, li.active, li.selected {
             // background-color: inherit;
             color: inherit;
