Minor menu presentation improvements

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -128,6 +128,15 @@ header.events-and-training, header.events-and-training .navbar .dropdown-content
 header.policy-hub, header.policy-hub .navbar .dropdown-content {
     background-color: #ef6c00;
 }
+header.join, header.join .navbar .dropdown-content {
+    background-color: #303f9f;
+}
+header.media, header.media .navbar .dropdown-content {
+    background-color: #ef6c00;
+}
+header.about, header.about .navbar .dropdown-content {
+    background-color: #c62828;
+}
 
 .row .col.navbar-nav {
     padding: 0;
