--- a/src/app/components/shared/header/menu-items.component.html
+++ b/src/app/components/shared/header/menu-items.component.html
@@ -1,11 +1,11 @@
-<li *ngIf="menuType == 'mobile'">
+<!-- <li *ngIf="menuType == 'mobile'">
     <div class="userView">
         <img class="background" src="">
         <a href="#!user"><img class="circle" src=""></a>
         <a href="#!name"><span class="white-text name">SCVO</span></a>
         <a href="#!email"><span class="white-text email"></span></a>
     </div>
-</li>
+</li> -->
 
 <li *ngFor="let navigationItem of navigationMenu, let i = index">
     <ul>
