--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -3,7 +3,7 @@
         <nav class="brand">
             <div class="nav-wrapper">
                 <div class="row">
-                    <div class="col s12 m8 navbar-brand">
+                    <div class="col s12 m8 l9 navbar-brand">
                         <ul id="main-menu" class="side-nav" menu-items="mobile"></ul>
                         <a href="#" materialize="sideNav" [materializeParams]="[{closeOnClick: true, edge: 'left', menuWidth: 350}]" data-activates="main-menu" class="button-collapse">
                             <i class="material-icons">menu</i>
@@ -11,7 +11,7 @@
                         <a [routerLink]="['/']" class="brand-logo hide-on-med-and-down"><img src="app/assets/images/logos/scvo-white.png" /> Scottish Council for Voluntary Organisations</a>
                         <a [routerLink]="['/']" class="brand-logo hide-on-large-only"><img src="app/assets/images/logos/scvo-white.png" /> SCVO</a>
                     </div>
-                    <div class="col hide-on-small-only m4 right navbar-search">
+                    <div class="col hide-on-small-only m4 l3 right navbar-search">
                         <form ngForm="searchForm">
                             <input-debounce delay="500" (value)="searchChanged($event)"></input-debounce>
                         </form>
@@ -26,11 +26,7 @@
                         <ul menu-items="desktop"></ul>
                         <ul class="right">
                             <li [routerLinkActive]="['active']"><a [routerLink]="['/about']">About</a></li>
-                        </ul>
-                        <ul class="right">
                             <li [routerLinkActive]="['active']"><a [routerLink]="['/media']">Media</a></li>
-                        </ul>
-                        <ul class="right">
                             <li [routerLinkActive]="['active']"><a [routerLink]="['/join']">Join us</a></li>
                         </ul>
                     </div>
