--- a/src/app/components/shared/header/menu-items.component.html
+++ b/src/app/components/shared/header/menu-items.component.html
@@ -1,7 +1,7 @@
 <!-- <li *ngIf="menuType == 'mobile'">
     <div class="userView">
-        <img class="background" src="">
-        <a href="#!user"><img class="circle" src=""></a>
+        <img class="background" src="/app/assets/images/icons/scvo.png" />
+        <a href="#!user"><img class="circle" src="/app/assets/images/icons/scvo.png" /></a>
         <a href="#!name"><span class="white-text name">SCVO</span></a>
         <a href="#!email"><span class="white-text email"></span></a>
     </div>
