Fixed bug and improved menu style

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -190,7 +190,7 @@ header.about, header.about .navbar .dropdown-content {
         //     line-height: 36px;
         // }
         li:hover, li.active, li.selected {
-            // background-color: inherit;
+            background-color: rgba(0, 0, 0, 0.2);
             color: inherit;
         }
     }
