Minor display improvements

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -223,8 +223,9 @@ home {
     }
 
     @media screen and (max-width: 992px) {
-        h3.center {
+        h1.center {
             font-size: 1.7em;
+            margin: 1rem 0 0;
         }
     }
 }
