Navbar display bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -169,6 +169,8 @@ header.about, header.about .navbar .dropdown-content {
     }
     .brand-logo {
         padding-left: 3px;
+        top: 0;
+        left: 0;
         img {
             width: 42px;
             height: auto;
