--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -3,7 +3,7 @@
         <nav class="brand">
             <div class="nav-wrapper">
                 <div class="row">
-                    <div class="col s12 m8 l9 navbar-brand">
+                    <div class="col m8 l9 navbar-brand">
                         <ul id="main-menu" class="side-nav" menu-items="mobile"></ul>
                         <a href="#" materialize="sideNav" [materializeParams]="[{closeOnClick: true, edge: 'left', menuWidth: 330}]" data-activates="main-menu" class="button-collapse">
                             <i class="material-icons">menu</i>
