Added draft privacy and t&c pages

--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -20,8 +20,8 @@
                 <div class="col l3">
                     <h5>Information</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="#">Terms &amp; conditions</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#">Privacy policy</a></li>
+                        <li><a class="grey-text text-lighten-3" [routerLink]="['/terms-and-conditions']">Terms &amp; conditions</a></li>
+                        <li><a class="grey-text text-lighten-3" [routerLink]="['/privacy-and-cookies']">Privacy &amp; cookies</a></li>
                         <li><a class="grey-text text-lighten-3" href="#">Cookie policy</a></li>
                         <li><a class="grey-text text-lighten-3" href="#">Accessibility</a></li>
                     </ul>
