--- a/src/app/components/shared/header/search.input.component.html
+++ b/src/app/components/shared/header/search.input.component.html
@@ -1,5 +1,5 @@
 <div class="input-field">
-    <input type="search" [(ngModel)]="inputValue" (keyup.enter)="values=inputValue.value">
+    <input type="search" [(ngModel)]="inputValue" (keyup.enter)="values=inputValue.value" class="input-field">
     <label for="search"><i class="material-icons">search</i></label>
     <i class="material-icons" (click)="inputValue = ''">close</i>
 </div>
