Minor style improvements

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -169,14 +169,16 @@ header.about, header.about .navbar .dropdown-content {
     }
     .brand-logo {
         padding-left: 3px;
-        top: 0;
-        left: 0;
         img {
             width: 42px;
             height: auto;
             vertical-align: -7px;
             margin-right: 5px;
         }
+    }
+    .brand-logo.hide-on-med-and-down {
+        top: 0;
+        left: 0;
     }
 
     .dropdown-content {
