--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header class="{{pathClasses}}"></header>
 
-<main>
+<main class="{{pathClasses}}">
     <div class="container-fluid">
         <div class="row">
             <div class="col s12">
