--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -84,6 +84,7 @@ main {
         margin-left: -29px;
     }
 }
+.btn, .btn:hover,
 .z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content, .collapsible, .side-nav {
     box-shadow: none;
 }
@@ -241,6 +242,12 @@ policy {
 
     h4.promo-caption {
         margin-top: 0;
+    }
+}
+
+.office-space {
+    .content img {
+        width: 100%;
     }
 }
 
