Fixed mistake in mobile navigation

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -202,6 +202,9 @@ header.about, header.about .navbar .dropdown-content {
     .dropdown-content li > a, .dropdown-content li > span {
         padding: 14px 15px;
     }
+    .collapsible-header {
+        font-weight: bold;
+    }
 
     .side-nav {
         a.active {
