Style fix after menu change

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -120,7 +120,7 @@ header.running-your-organisation, header.running-your-organisation .navbar .drop
 header.employability, header.employability .navbar .dropdown-content {
     background-color: #2e7d32;
 }
-header.products-and-services, header.products-and-services .navbar .dropdown-content {
+header.services, header.services .navbar .dropdown-content {
     background-color: #c62828;
 }
 header.events-and-training, header.events-and-training .navbar .dropdown-content {
