--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,7 +61,7 @@ h6 {
     font-size: 1em;
 }
 main {
-    padding: 0.5rem 0;
+    padding: 120px 0 0.5rem;
     a:link {
         text-decoration: underline;
     }
@@ -93,6 +93,8 @@ main {
 // Navbar ======================================================================
 
 header {
+    position: fixed;
+    width: 100%;
     padding-bottom: 0;
     nav {
         box-shadow: none;
@@ -111,6 +113,24 @@ header {
         background-color: rgba(0,0,0,0.1);
     }
 }
+// header.scroll {
+//     .navbar {
+//         nav {
+//             transition: all 0.1s ease;
+//             height: 32px;
+//             line-height: 32px;
+//         }
+//         .brand-logo {
+//             transition: all 0.1s ease;
+//             font-size: 1.4em;
+//             img {
+//                 transition: all 0.1s ease;
+//                 width: 30px;
+//             }
+//         }
+//     }
+// }
+
 header, header .navbar .dropdown-content {
     background-color: #009e99;
 }
