Fixed active menu item bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -219,6 +219,9 @@ header.about, header.about .navbar .dropdown-content {
             color: inherit;
         }
     }
+    li a.active {
+        background-color: rgba(0, 0, 0, 0.2);
+    }
     .dropdown-content li > a, .dropdown-content li > span {
         padding: 14px 15px;
     }
