Split Drupal connection out into two components, one for index and one for single page/post

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -93,7 +93,9 @@ main {
 // Navbar ======================================================================
 
 header {
+    transition: all 0.5s ease;
     position: fixed;
+    z-index: 100;
     width: 100%;
     padding-bottom: 0;
     nav {
@@ -113,23 +115,24 @@ header {
         background-color: rgba(0,0,0,0.1);
     }
 }
-// header.scroll {
+header.scroll {
+    transition: all 0.3s ease;
+    box-shadow: #333 0 -5px 2em;
 //     .navbar {
 //         nav {
-//             transition: all 0.1s ease;
 //             height: 32px;
 //             line-height: 32px;
+//             // transition: all 0.1s ease;
 //         }
 //         .brand-logo {
-//             transition: all 0.1s ease;
 //             font-size: 1.4em;
+//             // transition: all 0.1s ease;
 //             img {
-//                 transition: all 0.1s ease;
 //                 width: 30px;
 //             }
 //         }
 //     }
-// }
+}
 
 header, header .navbar .dropdown-content {
     background-color: #009e99;
