Integrated loading bar as tint to background colour of navbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,7 +61,7 @@ h6 {
     font-size: 1em;
 }
 main {
-    padding: 120px 0 0.5rem;
+    padding: 128px 0 0.5rem;
     a:link {
         text-decoration: underline;
     }
@@ -134,6 +134,11 @@ header.scroll {
 //     }
 }
 
+.slim-loading-bar-progress {
+    position: absolute;
+    transition: all 0.2s ease;
+}
+
 header, header .navbar .dropdown-content {
     background-color: #009e99;
 }
@@ -167,6 +172,9 @@ header.about, header.about .navbar .dropdown-content {
     a {
         // not sure why this is needed - problem stacking two navbars
         display: block;
+    }
+    ul {
+        position: relative;
     }
     // a.active {
     //     background-color: rgba(0, 0, 0, 0.1);
