--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -23,11 +23,12 @@
             <div class="nav-wrapper">
                 <div class="row">
                     <div class="col s12 navbar-nav">
+                        <ng2-slim-loading-bar color="rgba(0,0,0,0.1)" height="64px"></ng2-slim-loading-bar>
                         <ul menu-items="desktop"></ul>
                         <ul class="right">
-                            <li [routerLinkActive]="['active']"><a [routerLink]="['/about']">About</a></li>
-                            <li [routerLinkActive]="['active']"><a [routerLink]="['/media']">Media</a></li>
-                            <li [routerLinkActive]="['active']"><a [routerLink]="['/join']">Join us</a></li>
+                            <li [routerLinkActive]="['active']"><a [routerLink]="['/about-us']">About</a></li>
+                            <li [routerLinkActive]="['active']"><a [routerLink]="['/media-centre']">Media</a></li>
+                            <li [routerLinkActive]="['active']"><a [routerLink]="['/join-scvo']">Join us</a></li>
                         </ul>
                     </div>
                 </div>
