--- a/src/app/components/dynamic/cms/drupal-index.component.html
+++ b/src/app/components/dynamic/cms/drupal-index.component.html
@@ -1,6 +1,9 @@
 <cms-single></cms-single>
 
-<div class="drupal content" style="border: 1px solid green;">
-    <p><strong>Sub-page content</strong></p>
+<div class="drupal content">
+    <p><strong>Sections:</strong></p>
 
+    <ul *ngFor="let link of content_links">
+        <li><a [routerLink]="link.path">{{link.title}}</a></li>
+    </ul>
 </div>
