Tidied sub-page nav drupal connection

--- a/src/app/components/dynamic/cms/drupal-index.component.html
+++ b/src/app/components/dynamic/cms/drupal-index.component.html
@@ -1,9 +1,9 @@
 <cms-single></cms-single>
 
 <div class="drupal content">
-    <p><strong>Sections:</strong></p>
+    <h3 class="light"><strong>Sections</strong></h3>
 
     <ul *ngFor="let link of content_links">
-        <li><a [routerLink]="link.path">{{link.title}}</a></li>
+        <li><h4 class="light"><a [routerLink]="link.path">{{link.title}}</a></h4></li>
     </ul>
 </div>
