--- a/src/app/components/shared/header/menu-items.component.html
+++ b/src/app/components/shared/header/menu-items.component.html
@@ -8,7 +8,7 @@
 </li> -->
 
 <li *ngFor="let navigationItem of navigationMenu, let i = index">
-    <ul>
+    <ul *ngIf="navigationItem.class != 'right'">
         <li *ngIf="menuType == 'desktop' && !navigationItem.contents">
             <a [routerLink]="navigationItem.path">{{navigationItem.title}}</a>
         </li>
