Fixed IE menu bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -104,6 +104,9 @@ header {
             line-height: inherit;
             display: inline-block;
         }
+        ul a {
+            display: inline-block;
+        }
         ul a:hover {
             background-color: rgba(0, 0, 0, 0.2);
         }
@@ -118,20 +121,20 @@ header {
 header.scroll {
     transition: all 0.3s ease;
     box-shadow: #333 0 -5px 2em;
-//     .navbar {
-//         nav {
-//             height: 32px;
-//             line-height: 32px;
-//             // transition: all 0.1s ease;
-//         }
-//         .brand-logo {
-//             font-size: 1.4em;
-//             // transition: all 0.1s ease;
-//             img {
-//                 width: 30px;
-//             }
-//         }
-//     }
+    //     .navbar {
+    //         nav {
+    //             height: 32px;
+    //             line-height: 32px;
+    //             // transition: all 0.1s ease;
+    //         }
+    //         .brand-logo {
+    //             font-size: 1.4em;
+    //             // transition: all 0.1s ease;
+    //             img {
+    //                 width: 30px;
+    //             }
+    //         }
+    //     }
 }
 
 .slim-loading-bar-progress {
@@ -171,6 +174,9 @@ header.about, header.about .navbar .dropdown-content {
     padding: 0;
     a {
         // not sure why this is needed - problem stacking two navbars
+        display: inline-block;
+    }
+    .dropdown-content a {
         display: block;
     }
     ul {
