Added example blog section

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -93,7 +93,9 @@ main {
 .z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content, .collapsible, .side-nav {
     box-shadow: none;
 }
-
+h1.parent_title a {
+    text-transform: capitalize;
+}
 
 // Navbar ======================================================================
 
