--- a/src/app/components/dynamic/cms/drupal-index.component.html
+++ b/src/app/components/dynamic/cms/drupal-index.component.html
@@ -1,9 +1,33 @@
 <cms-single></cms-single>
 
-<div class="drupal content">
+<div class="drupal content" *ngIf="parent != 'policy-hub'">
     <h3 class="light"><strong>Sections</strong></h3>
 
     <ul *ngFor="let link of content_links">
         <li><h4 class="light"><a [routerLink]="link.path">{{link.title}}</a></h4></li>
     </ul>
+</div>
+
+<div class="drupal content" *ngIf="parent == 'policy-hub'">
+    <h3 class="light"><strong>Posts</strong></h3>
+
+    <div class="row">
+        <div class="col s12 m6" *ngFor="let blog of content_links">
+            <div class="card sticky-action">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="#" height="100" />
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">{{blog.title}}<i class="material-icons right">more_vert</i></span>
+                </div>
+                <div class="card-action">
+                    <a [routerLink]="blog.path">Read more&hellip;</a>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">{{blog.title}}<i class="material-icons right">close</i></span>
+                    <div [innerHTML]="blog.body"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
