--- a/src/app/components/dynamic/cms/drupal-single.component.html
+++ b/src/app/components/dynamic/cms/drupal-single.component.html
@@ -4,16 +4,22 @@
 
 <div *ngIf="!error" class="drupal content">
     <p class="right" *ngIf="content_nid"><a href="https://master-o6miopmkpjxjq.eu.platform.sh/node/{{content_nid}}/edit" class="btn btn-primary"><span class="fa fa-edit"></span>&ensp;Edit</a></p>
-    <h1 class="light title" [innerHTML]="content_title"></h1>
 
-    <h2 class="light subheading" [innerHTML]="content_subheading"></h2>
+    <div *ngIf="!parent_title">
+        <h1 class="light title" [innerHTML]="content_title"></h1>
+        <h2 class="light subheading" [innerHTML]="content_subheading"></h2>
+    </div>
+    <div *ngIf="parent_title">
+        <h1 class="light parent_title"><a [routerLink]="parent_path" [innerHTML]="parent_title"></a></h1>
+        <h2 class="light title" [innerHTML]="content_title"></h2>
+        <h3 class="light subheading" [innerHTML]="content_subheading"></h3>
+    </div>
 
     <!-- <p class="timestamp">Last updated: {{content_revision_timestamp | date:'yyyy-MM-dd H:mm:ss'}}</p> -->
 
     <div class="body" *ngIf="content_body_format == 'markdown'" [innerHTML]="content_body | markdown"></div>
     <div class="body" *ngIf="content_body_format == 'basic_html' || content_body_format == 'full_html'" [innerHTML]="content_body"></div>
     <div class="body" *ngIf="content_body_format == 'plaintext'">{{content_body}}</div>
-
 
     <!-- <pre>{{content | json}}</pre> -->
 </div>
