Improved blog view, moved header content around

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,10 @@
 @charset "utf-8";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:900);
 
 // Base variables ==============================================================
 
+$logo-font-family: "Lato", "Arial", sans-serif;
 $base-font-family: "Open Sans", "Helvetica", sans-serif;
 
 
@@ -200,6 +202,7 @@ header.about, header.about .navbar .dropdown-content {
     .navbar-search {
         padding-right: 0;
         .input-field input[type=search] {
+            height: 64px !important;
             margin-bottom: 0;
             background-color: rgba(255, 255, 255, 0.1);
         }
@@ -213,12 +216,14 @@ header.about, header.about .navbar .dropdown-content {
         }
     }
     .brand-logo {
+        font-family: $logo-font-family;
+        font-weight: 900;
         padding-left: 3px;
         img {
             width: 42px;
             height: auto;
-            vertical-align: -7px;
-            margin-right: 5px;
+            vertical-align: -10px;
+            margin-right: 0;
         }
     }
     .brand-logo.hide-on-med-and-down {
