--- a/src/app/components/dynamic/cms/drupal-index.component.html
+++ b/src/app/components/dynamic/cms/drupal-index.component.html
@@ -13,9 +13,9 @@
 
     <div class="row">
         <div class="col s12 m6" *ngFor="let blog of content_links">
-            <div class="card sticky-action">
+            <div class="card small sticky-action">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="#" height="100" />
+                    <img class="activator" src="{{blog.field_header_image}}" />
                 </div>
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">{{blog.title}}<i class="material-icons right">more_vert</i></span>
@@ -25,7 +25,7 @@
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">{{blog.title}}<i class="material-icons right">close</i></span>
-                    <div [innerHTML]="blog.body"></div>
+                    <div [innerHTML]="blog.field_summary"></div>
                 </div>
             </div>
         </div>
