--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -8,8 +8,12 @@
                         <a href="#" materialize="sideNav" [materializeParams]="[{closeOnClick: true, edge: 'left', menuWidth: 330}]" data-activates="main-menu" class="button-collapse">
                             <i class="material-icons">menu</i>
                         </a>
-                        <a [routerLink]="['/']" class="brand-logo hide-on-med-and-down"><img src="app/assets/images/logos/scvo-white.png" /> Scottish Council for Voluntary Organisations</a>
-                        <a [routerLink]="['/']" class="brand-logo hide-on-large-only"><img src="app/assets/images/logos/scvo-white.png" /> SCVO</a>
+                        <a [routerLink]="['/']" class="brand-logo"><img src="app/assets/images/logos/scvo-white.png" /> SCVO</a>
+                        <ul class="right hide-on-med-and-down">
+                            <li *ngFor="let navigationItem of navigationMenu, let i = index" [routerLinkActive]="['active']">
+                                <a *ngIf="navigationItem.class == 'right'" [routerLink]="navigationItem.path">{{navigationItem.title}}</a>
+                            </li>
+                        </ul>
                     </div>
                     <div class="col hide-on-small-only m4 l3 right navbar-search">
                         <form ngForm="searchForm">
@@ -25,11 +29,6 @@
                     <div class="col s12 navbar-nav">
                         <ng2-slim-loading-bar color="rgba(0,0,0,0.1)" height="64px"></ng2-slim-loading-bar>
                         <ul menu-items="desktop"></ul>
-                        <ul class="right">
-                            <li *ngFor="let navigationItem of navigationMenu, let i = index" [routerLinkActive]="['active']">
-                                <a *ngIf="navigationItem.class == 'right'" [routerLink]="navigationItem.path">{{navigationItem.title}}</a>
-                            </li>
-                        </ul>
                         <!-- <ul class="right">
                             <li [routerLinkActive]="['active']"><a [routerLink]="['/about-us']">About</a></li>
                             <li [routerLinkActive]="['active']"><a [routerLink]="['/media-centre']">Media</a></li>
