--- a/src/app/components/dynamic/search/site/elastic-results.component.html
+++ b/src/app/components/dynamic/search/site/elastic-results.component.html
@@ -63,7 +63,7 @@
                         <span class="white-text">
                             <strong>Website Content</strong>
                             <h5 *ngIf="result._source.title">{{result._source.title}}</h5>
-                            <p *ngIf="result._source.processed" [innerHTML]="result._source.processed"></p>
+                            <p *ngIf="result._source.field_summary" [innerHTML]="result._source.field_summary"></p>
                         </span>
                     </div>
                 </div>
