--- a/src/app/components/shared/header/menu-items.component.html
+++ b/src/app/components/shared/header/menu-items.component.html
@@ -27,7 +27,7 @@
             </ul>
         </li>
         <li class="no-padding" *ngIf="menuType == 'mobile' && navigationItem.contents">
-            <ul class="collapsible collapsible-accordion">
+            <ul class="collapsible collapsible-accordion" materialize="collapsible" data-collapsible="accordion">
                 <li>
                     <a class="collapsible-header">{{navigationItem.title}}<span class="material-icons arrow_drop_down right">arrow_drop_down</span></a>
                     <div class="collapsible-body">
