--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,22 +45,22 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
 }
 h1 {
-    font-size: 3em;
+    font-size: 2.8rem;
 }
 h2 {
-    font-size: 2.2em;
+    font-size: 2.1rem;
 }
 h3 {
-    font-size: 1.8em;
+    font-size: 1.7rem;
 }
 h4 {
-    font-size: 1.5em;
+    font-size: 1.4rem;
 }
 h5 {
-    font-size: 1.2em;
+    font-size: 1.2rem;
 }
 h6 {
-    font-size: 1em;
+    font-size: 1rem;
 }
 main {
     // padding: 128px 0 0.5rem;
