--- a/src/app/components/dynamic/cms/drupal-index.component.html
+++ b/src/app/components/dynamic/cms/drupal-index.component.html
@@ -1,7 +1,7 @@
 <cms-single></cms-single>
 
 <div class="drupal content" *ngIf="parent != 'policy-hub'">
-    <h3 class="light"><strong>Sections</strong></h3>
+    <h3 class="light" *ngIf="content_links"><strong>Sections</strong></h3>
 
     <ul *ngFor="let link of content_links">
         <li><h4 class="light"><a [routerLink]="link.path">{{link.title}}</a></h4></li>
@@ -9,7 +9,7 @@
 </div>
 
 <div class="drupal content" *ngIf="parent == 'policy-hub'">
-    <h3 class="light"><strong>Posts</strong></h3>
+    <h3 class="light" *ngIf="content_links"><strong>Posts</strong></h3>
 
     <div class="row">
         <div class="col s12 m6" *ngFor="let blog of content_links">
