Tidied up breadcrumb links

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -302,7 +302,7 @@ header.about, header.about .navbar .dropdown-content {
         cursor: pointer;
     }
 }
-.about-us .breadcrumb li:first-child {
+.about-us .breadcrumb li {
     display: inline-block !important;
 }
 .events .breadcrumb,
