--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -2,30 +2,33 @@
     <div class="container-fluid">
         <div class="footer-main">
             <div class="row">
-                <div class="col s12">
-                    <h5>About us</h5>
-                    <p>The Scottish Council for Voluntary Organisations (SCVO) is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</p>
-                </div>
             </div>
             <div class="row">
-                <div class="col l3">
+                <div class="col l10 m8 s12">
+                    <h5>About SCVO</h5>
+                    <p>The Scottish Council for Voluntary Organisations is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</p>
+                    <p><a class="grey-text text-lighten-3" [routerLink]="['/accessibility']">Accessibility</a> |
+                        <a class="grey-text text-lighten-3" [routerLink]="['/terms-and-conditions']">Terms &amp; conditions</a> |
+                        <a class="grey-text text-lighten-3" [routerLink]="['/privacy-and-cookies']">Privacy &amp; cookies</a></p>
+                </div>
+                <!-- <div class="col s9">
+                    <h5>Information</h5>
+                    <ul class="inline">
+                        <li><a class="grey-text text-lighten-3" [routerLink]="['/terms-and-conditions']">Terms &amp; conditions</a></li>
+                        <li><a class="grey-text text-lighten-3" [routerLink]="['/privacy-and-cookies']">Privacy &amp; cookies</a></li>
+                        <li><a class="grey-text text-lighten-3" [routerLink]="['/accessibility']">Accessibility</a></li>
+                    </ul>
+                </div> -->
+                <div class="col l2 m4 s12">
                     <h5>Contact us</h5>
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="mailto:enquiries@scvo.org.uk">enquiries@scvo.org.uk</a></li>
                         <li><a class="grey-text text-lighten-3" href="tel:+441314748000">0131 474 8000</a></li>
-                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/scvotweet">Twitter</a></li>
-                        <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/SCVO1939">Facebook</a></li>
+                        <!-- <li><a class="grey-text text-lighten-3" href="https://twitter.com/scvotweet">Twitter</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/SCVO1939">Facebook</a></li> -->
                     </ul>
                 </div>
-                <div class="col l3">
-                    <h5>Information</h5>
-                    <ul>
-                        <li><a class="grey-text text-lighten-3" [routerLink]="['/terms-and-conditions']">Terms &amp; conditions</a></li>
-                        <li><a class="grey-text text-lighten-3" [routerLink]="['/privacy-and-cookies']">Privacy &amp; cookies</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#">Accessibility</a></li>
-                    </ul>
-                </div>
-                <div class="col l3">
+                <!-- <div class="col l3">
                     <h5>Services</h5>
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="http://goodhq.org">GoodHQ</a></li>
@@ -42,7 +45,7 @@
                         <li><a class="grey-text text-lighten-3" href="http://www.saifscotland.org.uk">Scottish Accessible Information Forum</a></li>
                         <li><a class="grey-text text-lighten-3" href="http://charter.scvo.org.uk">Scotland's Digital Participation Charter</a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
             <div class="footer-copyright">
                 <div class="row">
