Added alpha label over logo

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -224,11 +224,25 @@ header.about, header.about .navbar .dropdown-content {
         font-weight: 900;
         padding-left: 3px;
         margin-top: 3px;
+        position: absolute;
         img {
             width: 42px;
             height: auto;
             vertical-align: -8px;
             margin-right: 0;
+        }
+        .version {
+            position: absolute;
+            top: 12px;
+            right: -20px;
+            line-height: 1em;
+            font-family: $base-font-family;
+            font-size: 0.9rem;
+            font-variant: small-caps;
+            -webkit-transform: rotate(60deg);
+            -moz-transform: rotate(60deg);
+            -ms-transform: rotate(60deg);
+            -o-transform: rotate(60deg);
         }
     }
     .brand-logo.hide-on-med-and-down {
