Rearranged the post/page Drupal display to match new DB structure

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -170,7 +170,7 @@ header.events, header.events .navbar .dropdown-content {
 header.training, header.training .navbar .dropdown-content {
     background-color: #00838f;
 }
-header.policy-hub, header.policy-hub .navbar .dropdown-content {
+header.policy, header.policy .navbar .dropdown-content {
     background-color: #ef6c00;
 }
 header.join, header.join .navbar .dropdown-content {
