--- a/src/app/components/dynamic/cms/drupal-page.component.html
+++ b/src/app/components/dynamic/cms/drupal-page.component.html
@@ -1,14 +1,7 @@
-<!-- <div *ngIf="loading">
-    <p>Loading...</p>
-</div> -->
-
-<div *ngIf="!error" class="drupal content">
-    <p class="right" *ngIf="content_nid"><a href="https://master-o6miopmkpjxjq.eu.platform.sh/node/{{content_nid}}/edit" class="btn btn-primary"><span class="fa fa-edit"></span>&ensp;Edit</a></p>
+<div *ngIf="!error" class="drupal page content">
+    <p class="right" *ngIf="content_nid"><a href="https://master-o6miopmkpjxjq.eu.platform.sh/node/{{content_nid}}/edit" class="btn btn-primary"><span class="fa fa-edit"></span>&ensp;Edit page</a></p>
 
     <h1 [innerHTML]="content_title" class="light title"></h1>
-
-    <p *ngIf="content_tags">Tags: <span *ngFor="let tag of content_tags | mapToIterable"><a [routerLink]="['/tags/'+tag.val]">{{tag.val}}</a> </span></p>
-    <!-- <pre>{{content_tags | json}}</pre> -->
 
     <h2 *ngIf="content_subheading" [innerHTML]="content_subheading" class="light subheading"></h2>
 
