--- a/src/app/components/dynamic/search/events/elastic-results.component.html
+++ b/src/app/components/dynamic/search/events/elastic-results.component.html
@@ -1,4 +1,4 @@
-<h1 class="light">Events</h1>
+<h1 class="light">Training courses</h1>
 
 <div class="event-search card">
     <form class="card-content">
@@ -52,7 +52,7 @@ result.date
 </div>
 </div>
 <div class="col s10 ">
-<h4 class="title"><a [routerLink]="['/events/detail']">result.title</a></h4>
+<h4 class="title"><a [routerLink]="['/training/detail']">result.title</a></h4>
 <p class="description">result.location, result.description</p>
 </div>
 <div class="col s1 cost">
@@ -73,7 +73,7 @@ result.date
                 </div>
             </div>
             <div class="col s10 ">
-                <h4 class="title"><a [routerLink]="['/events/detail']">Managing and supervising people</a></h4>
+                <h4 class="title"><a [routerLink]="['/training/detail']">Managing and supervising people</a></h4>
                 <p class="description">Glasgow, This event takes place over several days. Please see description for details</p>
             </div>
             <div class="col s1 cost">
@@ -94,7 +94,7 @@ result.date
                 </div>
             </div>
             <div class="col s10 ">
-                <h4 class="title"><a [routerLink]="['/events/detail']">Fit for fundraising</a></h4>
+                <h4 class="title"><a [routerLink]="['/training/detail']">Fit for fundraising</a></h4>
                 <p class="description">Edinburgh, This event takes place over several days. Please see description for details</p>
             </div>
             <div class="col s1 cost">
@@ -115,7 +115,7 @@ result.date
                 </div>
             </div>
             <div class="col s10 ">
-                <h4 class="title"><a [routerLink]="['/events/detail']">Building Better Governance Scotland Programme</a></h4>
+                <h4 class="title"><a [routerLink]="['/training/detail']">Building Better Governance Scotland Programme</a></h4>
                 <p class="description">Edinburgh, This event takes place over several days. Please see description for details</p>
             </div>
             <div class="col s1 cost">
@@ -136,7 +136,7 @@ result.date
                 </div>
             </div>
             <div class="col s10 ">
-                <h4 class="title"><a [routerLink]="['/events/detail']">Data protection seminar</a></h4>
+                <h4 class="title"><a [routerLink]="['/training/detail']">Data protection seminar</a></h4>
                 <p class="description">Glasgow, 10:00 - 12:30</p>
             </div>
             <div class="col s1 cost">
@@ -157,7 +157,7 @@ result.date
                 </div>
             </div>
             <div class="col s10 ">
-                <h4 class="title"><a [routerLink]="['/events/detail']">Get cracking on a comms plan: raising your profile</a></h4>
+                <h4 class="title"><a [routerLink]="['/training/detail']">Get cracking on a comms plan: raising your profile</a></h4>
                 <p class="description">Glasgow, 09:30 - 16:30</p>
             </div>
             <div class="col s1 cost">
