--- a/src/app/components/dynamic/cms/drupal-page.component.html
+++ b/src/app/components/dynamic/cms/drupal-page.component.html
@@ -1,11 +1,15 @@
 <div *ngIf="!error" class="drupal page content">
     <p class="right" *ngIf="content_nid"><a href="https://master-o6miopmkpjxjq.eu.platform.sh/node/{{content_nid}}/edit" class="btn btn-primary"><span class="fa fa-edit"></span>&ensp;Edit page</a></p>
 
-    <h1 [innerHTML]="content_title" class="light title"></h1>
+    <h1 [innerHTML]="content_category" class="light category"></h1>
+    <h2 [innerHTML]="content_title" class="light title"></h2>
 
-    <h2 *ngIf="content_subheading" [innerHTML]="content_subheading" class="light subheading"></h2>
+    <h3 *ngIf="content_subheading" [innerHTML]="content_subheading" class="light subheading"></h3>
 
     <!-- <p class="timestamp">Last updated: {{content_revision_timestamp | date:'yyyy-MM-dd H:mm:ss'}}</p> -->
+
+    <!-- <div *ngIf="content_category" [innerHTML]="content_category"></div>
+    <div *ngIf="content_subcategory" [innerHTML]="content_subcategory"></div> -->
 
     <div class="body" *ngIf="content_body_format == 'markdown'" [innerHTML]="content_body | markdown"></div>
     <div class="body" *ngIf="content_body_format == 'basic_html' || content_body_format == 'full_html'" [innerHTML]="content_body"></div>
